redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-stedi-yago
spec:
  selector:
    matchLabels:
      app: redis-stedi-yago
  serviceName: redis-stedi-yago
  replicas: 1
  template:
    metadata:
      labels:
        app: redis-stedi-yago
    spec:
      containers:
        - name: redis-stedi-yago
          image: redis:7.0.5-alpine
          imagePullPolicy: Always
          args: ["--requirepass", "$(REDIS_PASS)", "--appendonly", "yes", "--save", "900", "1", "--save", "30", "2"]
          ports:
            - containerPort: 6397
              name: redis
          volumeMounts:
            - name: redis-yago-volume
              mountPath: /data
  volumeClaimTemplates:
  - metadata: 
      name: redis-yago-volume
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: redis-stedi-yago
spec:
  ports:
    - port: 6397
      name: redis
  clusterIP: None
  selector:
    app: redis-stedi-yago
