app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cit270yagoservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cit270yagoservice
  template:
    metadata:
      name: cit270yagoservice
      labels:
        app: cit270yagoservice
    spec:
      containers:
      - name: cit270yagoservice
        image: gcr.io/mythic-producer-379820/yago-api
        volumeMounts:
        - name: ssl
          mountPath: "/etc/letsencrypt/live/SSL"
        command: ["npm"]
        args: ["run", "start"]
        resources:
          requests:
            cpu: 0.125
            memory: 500Mi
          limits:
            cpu: 0.125
            memory: 600Mi
        imagePullPolicy: Always
      volumes:
      - name: ssl
        secret:
          secretName: yagocerts
---
apiVersion: v1
kind: Service
metadata:
  name: stedi-yagooliveira-nodeport
spec:
  selector:
    app: cit270yagoservice
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stedi-yagooliveira-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: cit270yago
    networking.gke.io/managed-certificates: stedi-yagooliveira-certificate
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        beckend:
          service:
          # needs to match the name of the NodePort Service
            name: stedi-yagooliveira-nodeport
            port:
              number: 80
